# LLM-Termsheet-Ingestor

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  sample_termsheet.txt  test_validation.py
samples/: sample_termsheet.txt
src/: __init__.py  cli.py  database.py  extractor.py  ingestor.py  main.py  models.py  parsers.py
src/database/: __init__.py  connection.py  models.py
src/extractor/: __init__.py  errors.py  llm_agent.py  pdf_parser.py  system_prompt.py
src/helpers/: __init__.py  output.py  validation.py
src/schema/: __init__.py  product_schema.py
tests/: __init__.py  test_cli.py  test_database.py  test_extractor.py  test_ingestor.py  test_parsers.py
